// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with help text 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,27%,98%,1);
  border-color: hsla(216,19%,89%,1);
}

.c11 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  margin-left: 24px;
}

.c14 {
  margin-top: 4px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div,
.c9:focus + div {
  border-color: hsla(216,19%,89%,1);
  background-color: hsla(216,19%,89%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    aria-labelledby="checkbox-group-49-label-54"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-49-label-54"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruits
            <div
              class="c4"
            >
              <p
                class="c5 Text__StyledText-wkh56f-0"
                color="surface.text.normal.lowContrast"
                font-family="text"
                font-size="100"
                font-style="normal"
                font-weight="regular"
              >
                , Select one
              </p>
            </div>
          </p>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c6"
        display="flex"
      >
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="apple"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Apple
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="mango"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Mango
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="orange"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Orange
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="c14"
      >
        <span
          style="display: flex; flex-direction: row; align-items: center; word-break: break-all;"
        >
          <span
            class="c15"
            color="surface.text.muted.lowContrast"
            font-family="text"
            font-size="50"
            font-style="italic"
          >
            Select one
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> should render with label 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,27%,98%,1);
  border-color: hsla(216,19%,89%,1);
}

.c11 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  margin-left: 24px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div,
.c9:focus + div {
  border-color: hsla(216,19%,89%,1);
  background-color: hsla(216,19%,89%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    aria-labelledby="checkbox-group-19-label-24"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-19-label-24"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruits
            <div
              class="c4"
            >
              <p
                class="c5 Text__StyledText-wkh56f-0"
                color="surface.text.normal.lowContrast"
                font-family="text"
                font-size="100"
                font-style="normal"
                font-weight="regular"
              >
                , 
              </p>
            </div>
          </p>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c6"
        display="flex"
      >
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="apple"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Apple
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="mango"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Mango
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
        <div
          class=""
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-disabled="false"
                  aria-hidden="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  role="checkbox"
                  type="checkbox"
                  value="orange"
                />
                <div
                  class="c10"
                >
                  <div
                    class=""
                    style="opacity: 0; position: absolute; display: flex;"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      height="16px"
                      viewBox="0 0 16 16"
                      width="16px"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                        fill="hsla(220, 27%, 98%, 1)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="c11"
                    style="opacity: 0; position: absolute; display: flex;"
                  />
                </div>
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Orange
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
